--- a/MyObjectiveFlickr/Base.lproj/Main.storyboard
+++ b/MyObjectiveFlickr/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ra5-cp-Dkl">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,11 +17,109 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zeV-sb-GX6">
+                                <rect key="frame" x="20" y="152" width="560" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Vjp-zH-svi"/>
+                                </connections>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1KX-cq-WYe">
+                                <rect key="frame" x="20" y="222" width="560" height="30"/>
+                                <state key="normal" title="Search"/>
+                                <connections>
+                                    <action selector="didClickSearch:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ERw-Jr-NmB"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="zeV-sb-GX6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="5bB-eI-yiL"/>
+                            <constraint firstItem="1KX-cq-WYe" firstAttribute="top" secondItem="zeV-sb-GX6" secondAttribute="bottom" constant="40" id="HFK-gf-bGE"/>
+                            <constraint firstItem="1KX-cq-WYe" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="HiY-fM-ea2"/>
+                            <constraint firstItem="zeV-sb-GX6" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="88" id="Lmi-ad-uBB"/>
+                            <constraint firstItem="zeV-sb-GX6" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="gvI-cn-Tbm"/>
+                            <constraint firstItem="1KX-cq-WYe" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="lNb-Yb-ZGu"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="SmB-b9-2z7"/>
+                    <connections>
+                        <outlet property="searchButton" destination="1KX-cq-WYe" id="eAk-J0-EUy"/>
+                        <outlet property="searchTextField" destination="zeV-sb-GX6" id="1g6-Z0-dwT"/>
+                        <segue destination="skX-XZ-fEK" kind="show" identifier="flickrPhotosSegue" id="EXx-fL-nmm"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="952" y="418"/>
+        </scene>
+        <!--Flickr Photos View Controller-->
+        <scene sceneID="WsJ-wN-DV8">
+            <objects>
+                <collectionViewController id="skX-XZ-fEK" customClass="FlickrPhotosViewController" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="kOW-Ef-a1X">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="2d1-ZY-c5n">
+                            <size key="itemSize" width="200" height="200"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FlickrPhotoCell" id="g2c-PY-LxX" customClass="FlickrPhotoCell">
+                                <rect key="frame" x="0.0" y="64" width="200" height="200"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QGi-Cq-DUC">
+                                            <rect key="frame" x="2" y="2" width="196" height="196"/>
+                                        </imageView>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="QGi-Cq-DUC" secondAttribute="bottom" constant="2" id="7Dg-dF-cno"/>
+                                    <constraint firstItem="QGi-Cq-DUC" firstAttribute="leading" secondItem="g2c-PY-LxX" secondAttribute="leading" constant="2" id="Nt8-Bj-LEB"/>
+                                    <constraint firstItem="QGi-Cq-DUC" firstAttribute="top" secondItem="g2c-PY-LxX" secondAttribute="top" constant="2" id="Qi6-hM-SCC"/>
+                                    <constraint firstAttribute="trailing" secondItem="QGi-Cq-DUC" secondAttribute="trailing" constant="2" id="Tlm-Yn-TjQ"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="imageView" destination="QGi-Cq-DUC" id="2ZS-CU-pWa"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="skX-XZ-fEK" id="f9s-Fq-wMc"/>
+                            <outlet property="delegate" destination="skX-XZ-fEK" id="i5v-kJ-ZTE"/>
+                        </connections>
+                    </collectionView>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Cr5-0z-uRm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1736" y="423"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Wmh-Ic-rMV">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ra5-cp-Dkl" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="YU4-DX-lKV">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="LkI-TQ-V2N"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QPX-Hh-6O9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="140" y="418"/>
         </scene>
     </scenes>
 </document>
